--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     db:
         image: mysql:5.7
         volumes:
-          - ./db_data:/var/lib/mysql
+          - /opt/db_data:/var/lib/mysql
         restart: always
         environment:
           MYSQL_ROOT_PASSWORD: 1234567899
